--- a/admin/admin.lyx
+++ b/admin/admin.lyx
@@ -53,7 +53,7 @@
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
-\suppress_date false
+\suppress_date true
 \justification true
 \use_refstyle 1
 \index Index
